new ComboBox in start page, link all functionalities to ComboBox